--- a/abstract_Planet/abstract_Planet.csproj
+++ b/abstract_Planet/abstract_Planet.csproj
@@ -46,9 +46,11 @@
     <Compile Include="GiantPlanet.cs" />
     <Compile Include="IHasMoons.cs" />
     <Compile Include="IHasRings.cs" />
+    <Compile Include="IHabitable.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TerrestrialPlanet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
